# ionet

./: .clangd  .gitignore  CMakeLists.txt  README.md  client.hpp  server.hpp  session.hpp
.github/workflows/: ci.yml
connect/: socket.hpp
crypto/: chacha20.hpp  crypto.hpp  k25519.hpp
example/: client.cpp  server.cpp
include/ionet/: session.hpp
include/ionet/connect/: serialize.hpp  struct.hpp
tests/: crypto_test.cpp  ionet_test.cpp  session_test.cpp  system_test.cpp
